feat: User activation endpoint
