# src/routes/api.ts
@@ -6,6 +6,7 @@ const router = express.Router();
 
 router.post("/auth/register", authController.register);
 router.post("/auth/login", authController.login);
+router.post("/auth/activation", authController.activation);
 router.get("/auth/user", authMiddleware, authController.user);
 
 export default router;
